--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -121,6 +121,14 @@ http {
             proxy_set_header HOST $host;
         }
 
+        location ^~ /honest {
+            set $SER http://honest:80;
+            rewrite ^/honest/(.*) /$1 break;
+            rewrite ^/honest(.*) /$1 break;
+            proxy_pass $SER;
+            proxy_set_header HOST $host;
+        }
+
         location ^~ /ima {
             set $SER http://ima:8080;
             proxy_pass $SER;
