--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -98,6 +98,14 @@ http {
             proxy_set_header HOST $host;
         }
 
+        location ^~ /honest-be {
+            set $SER http://honest-be:80;
+            rewrite ^/honest-be/(.*) /$1 break;
+            rewrite ^/honest-be(.*) /$1 break;
+            proxy_pass $SER;
+            proxy_set_header HOST $host;
+        }
+
         location / {
             set $SER http://index_front:80;
             proxy_pass $SER;
