dir for acme challenge

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -106,6 +106,10 @@ http {
             proxy_set_header HOST $host;
         }
 
+        location ^~ /.well-known {
+            root /etc/nginx/well-known;
+        }
+
         location / {
             set $SER http://index_front:80;
             proxy_pass $SER;
