--- a/infra/ingress.yml
+++ b/infra/ingress.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
+      - ./nginx/well-known:/etc/nginx/well-known:ro
     ports:
     - 80:80
     - 443:443
