--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -14,7 +14,7 @@ http {
 
         listen 443 ssl http2;
         server_name logotipiwe.ru;
-        ssl_certificate /etc/letsencrypt/live/logotipiwe.ru/cert.pem;
+        ssl_certificate /etc/letsencrypt/live/logotipiwe.ru/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/logotipiwe.ru/privkey.pem;
 
         #ssl_trusted_certificate /etc/ssl/nginx_certs/chain.crt;
