--- a/infra/ingress.yml
+++ b/infra/ingress.yml
@@ -7,7 +7,8 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
-      - ./nginx/well-known:/etc/nginx/well-known:ro
+      - ./nginx/well-known:/etc/nginx/well-known:ro #для публикации acme-challenge от certbot
+      - /etc/letsencrypt/live/logotipiwe.ru/ #для получения сертификатов от certbot
     ports:
     - 80:80
     - 443:443
