--- a/.github/workflows/n8n-deploy.yml
+++ b/.github/workflows/n8n-deploy.yml
@@ -5,28 +5,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  check-deploy:
-    runs-on: ubuntu-latest
-    outputs:
-      should-deploy: ${{ steps.check.outputs.deploy }}
-    steps:
-      - name: Check if should deploy
-        id: check
-        run: |
-          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-            echo "deploy=true" >> $GITHUB_OUTPUT
-            echo "Manual deployment triggered"
-          elif [[ "${{ github.event.head_commit.message }}" == *"[n8n]"* ]]; then
-            echo "deploy=true" >> $GITHUB_OUTPUT
-            echo "Deploy keyword found in commit message"
-          else
-            echo "deploy=false" >> $GITHUB_OUTPUT
-            echo "No deploy trigger found"
-          fi
-
   deploy:
-    needs: check-deploy
-    if: needs.check-deploy.outputs.should-deploy == 'true'
+    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, '[n8n]')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
