--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,9 +3,9 @@ on:
   push:
     branches: [ "main" ]
   workflow_dispatch:
-  workflow_call:
 jobs:
   build:
+    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, '[deploy]')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
