--- a/infra/n8n.yml
+++ b/infra/n8n.yml
@@ -17,10 +17,13 @@ services:
       
       # n8n configuration
       N8N_BASIC_AUTH_ACTIVE: false
-      N8N_HOST: ${N8N_HOST}:30138
+      N8N_HOST: ${N8N_HOST}
       N8N_PORT: 5678
       N8N_PROTOCOL: https
       WEBHOOK_URL: https://${N8N_HOST}:30138/
+      
+      # Trust proxy for proper origin handling
+      N8N_TRUST_PROXY: true
       
       # Initial user creation (skips setup flow)
       N8N_USER_MANAGEMENT_DISABLED: false
