--- a/infra/nginx/n8n-nginx.conf
+++ b/infra/nginx/n8n-nginx.conf
@@ -23,7 +23,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             
             # Fix for n8n >= 1.87.0 "Invalid origin!" error
-            proxy_set_header Origin 'https://logotipiwe.ru:30138';
+            proxy_set_header Origin 'https://logotipiwe.ru';
             
             # WebSocket support for n8n
             proxy_http_version 1.1;
