--- a/infra/n8n.yml
+++ b/infra/n8n.yml
@@ -13,6 +13,8 @@ services:
       DB_POSTGRESDB_USER: postgres
       DB_POSTGRESDB_PASSWORD: ${N8N_DB_PASSWORD}
       N8N_RUNNERS_ENABLED: true
+      N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS: true
+      N8N_ENCRYPTION_KEY: ${N8N_ENCRYPTION_KEY}
       
       # n8n configuration
       N8N_BASIC_AUTH_ACTIVE: false
