[deploy] n8n path fix

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -110,6 +110,11 @@ http {
             root /etc/nginx/well-known;
         }
 
+        # Redirect /workflow.* to /n8n/workflow.*
+        location ~ ^/workflow(.*)$ {
+            return 301 /n8n/workflow$1;
+        }
+
         # n8n automation platform
         location ^~ /n8n {
             set $N8N_SER http://n8n:5678;
