--- a/.github/workflows/n8n-deploy.yml
+++ b/.github/workflows/n8n-deploy.yml
@@ -57,4 +57,9 @@ jobs:
             docker-compose -f n8n.yml pull --quiet
             
             echo "Performing seamless restart of n8n service..."
-            docker-compose -f n8n.yml up -d --no-deps --force-recreate
+            docker-compose -f n8n.yml stop n8n
+            docker-compose -f n8n.yml rm -f n8n
+            docker-compose -f n8n.yml up -d n8n
+            
+            echo "Checking n8n service status..."
+            docker-compose -f n8n.yml ps n8n
