--- a/.github/workflows/ingress.yml
+++ b/.github/workflows/ingress.yml
@@ -1,11 +1,11 @@
-name: Infra CI
+name: Infra ingress CI
 on:
   push:
     branches: [ "main" ]
   workflow_dispatch:
 jobs:
   build:
-    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, '[deploy]')
+    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, '[ingress]') || contains(github.event.head_commit.message, '[nginx]')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -42,18 +42,6 @@ jobs:
           password: ${{env.SSH_PASSWORD}}
           port: 22
           script: |
-            export MYSQL_ROOT_PASSWORD=${{env.MYSQL_ROOT_PASSWORD}}
-            export DB_PASS=${{env.DB_PASS}}
-            export PGADMIN_USER=${{env.PGADMIN_USER}}
-            export PGADMIN_PASSWORD=${{env.PGADMIN_PASSWORD}}
-
             cd /kuber/infra/
-            
-            FILES="ms.yml pma.yml portainer.yml pg.yml pgadmin.yml"
-            
-            # Iterate over specified files to pull and recreate
-            for file in $FILES; do
-              echo "Processing $file..."
-              docker-compose -f "$file" pull --quiet
-              docker-compose -f "$file" up -d --no-deps --force-recreate
-            done
+            docker-compose -f ingress.yml pull --quiet
+            docker-compose -f ingress.yml up -d --no-deps --force-recreate
