--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -163,4 +163,17 @@ http {
             return 200 'eea';
         }
     }
+
+    server {
+        resolver 127.0.0.11 valid=30s ipv6=off;
+
+        listen 443 ssl http2;
+        server_name n8n.logotipiwe.ru;
+        ssl_certificate /etc/nginx/ssl/all.logotipiwe.ru/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/all.logotipiwe.ru/privkey.pem;
+
+        location / {
+            return 200 'кулео';
+        }
+        }
 }
