--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -160,7 +160,31 @@ http {
         ssl_certificate_key /etc/nginx/ssl/all.logotipiwe.ru/privkey.pem;
 
         location / {
-            return 200 'eea';
+            set $N8N_SER http://n8n_test:5678;
+#             rewrite ^/n8n/(.*) /$1 break;
+#             rewrite ^/n8n$ / break;
+
+            proxy_pass $N8N_SER;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header HOST $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Real-IP $remote_addr;
+
+            # Fix for n8n >= 1.87.0 "Invalid origin!" error
+            proxy_set_header Origin 'https://n8n-test.logotipiwe.ru';
+
+            # WebSocket support for n8n
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+
+            # Timeouts for long-running workflows
+            proxy_connect_timeout 300s;
+            proxy_send_timeout 300s;
+            proxy_read_timeout 300s;
+
+            # Increase client body size for n8n workflow imports
+            client_max_body_size 100M;
         }
     }
 
