auto-certbot [certbot]

--- a/.github/workflows/certbot.yml
+++ b/.github/workflows/certbot.yml
@@ -48,5 +48,11 @@ jobs:
             export TELEGRAM_BOT_TOKEN=${{env.CERTBOT_TELEGRAM_BOT_TOKEN}}
             export TELEGRAM_CHAT_ID=${{env.CERTBOT_TELEGRAM_CHAT_ID}}
             cd /kuber/infra/
-            docker-compose -f certbot.yml pull --quiet
-            docker-compose -f certbot.yml up --build -d
+            echo "Stopping existing certbot container..."
+            docker-compose -f certbot.yml down
+            
+            echo "Building certbot image..."
+            docker-compose -f certbot.yml build --no-cache
+            
+            echo "Starting certbot container..."
+            docker-compose -f certbot.yml up -d
