--- a/infra/certbot.yml
+++ b/infra/certbot.yml
@@ -11,6 +11,8 @@ services:
       CERTBOT_OWNER_EMAIL: ${CERTBOT_OWNER_EMAIL}
       DOMAINS: logotipiwe.ru,*.logotipiwe.ru
       TIMEWEB_API_KEY: ${TIMEWEB_API_KEY}
+      TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
+      TELEGRAM_CHAT_ID: ${TELEGRAM_CHAT_ID}
     volumes:
       - ./certbot/entrypoint.sh:/entrypoint.sh:ro
       - ./certbot/scripts:/scripts:ro
