--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -180,4 +180,23 @@ http {
             client_max_body_size 100M;
         }
     }
+
+    server {
+        resolver 127.0.0.11 valid=30s ipv6=off;
+
+        listen 443 ssl http2;
+        server_name grafana.logotipiwe.ru;
+        ssl_certificate /etc/nginx/ssl/all.logotipiwe.ru/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/all.logotipiwe.ru/privkey.pem;
+
+        location / {
+            set $SER http://grafana:3000;
+
+            proxy_pass $SER;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header HOST $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+    }
 }
