--- a/.github/workflows/portainer.yml
+++ b/.github/workflows/portainer.yml
@@ -1,11 +1,11 @@
-name: Infra CI
+name: Portainer CI
 on:
   push:
     branches: [ "main" ]
   workflow_dispatch:
 jobs:
   build:
-    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, '[deploy]')
+    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, '[portainer]')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -14,18 +14,11 @@ jobs:
           token: ${{secrets.PAT}}
       - name: load-env
         uses: duskmoon314/action-load-env@v1.1.0
-      - name: Copy SSL cert
-        run: |
-          mkdir /tmp/deploy
-          cp dc-vars-data/ssl /tmp/deploy -r
       - name: Checkout project
         uses: actions/checkout@v3
         with:
           repository: Logotipiwe/dc_infrastructure
           token: ${{secrets.PAT}}
-      - name: Set SSL cert
-        run: |
-          cp -r /tmp/deploy/ssl/* ./infra/nginx/ssl
       - name: Upload
         uses: garygrossgarten/github-action-scp@release
         with:
@@ -42,18 +35,6 @@ jobs:
           password: ${{env.SSH_PASSWORD}}
           port: 22
           script: |
-            export MYSQL_ROOT_PASSWORD=${{env.MYSQL_ROOT_PASSWORD}}
-            export DB_PASS=${{env.DB_PASS}}
-            export PGADMIN_USER=${{env.PGADMIN_USER}}
-            export PGADMIN_PASSWORD=${{env.PGADMIN_PASSWORD}}
-
             cd /kuber/infra/
-            
-            FILES="ms.yml pma.yml pg.yml pgadmin.yml"
-            
-            # Iterate over specified files to pull and recreate
-            for file in $FILES; do
-              echo "Processing $file..."
-              docker-compose -f "$file" pull --quiet
-              docker-compose -f "$file" up -d --no-deps --force-recreate
-            done
+            docker-compose -f portainer.yml pull
+            docker-compose -f portainer.yml up -d --no-deps --force-recreate
