[nginx] chestno-game domains

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -204,7 +204,7 @@ http {
         resolver 127.0.0.11 valid=30s ipv6=off;
 
         listen 443 ssl http2;
-        server_name honest.logotipiwe.ru;
+        server_name honest.logotipiwe.ru chestno-game.ru chestno-game.online;
         ssl_certificate /etc/nginx/ssl/all.logotipiwe.ru/fullchain.pem;
         ssl_certificate_key /etc/nginx/ssl/all.logotipiwe.ru/privkey.pem;
 
