--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -201,12 +201,18 @@ http {
     }
 
     server {
+        listen 80;
+        server_name honest.logotipiwe.ru chestno-game.ru chestno-game.online;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
         resolver 127.0.0.11 valid=30s ipv6=off;
 
         listen 443 ssl http2;
-        server_name honest.logotipiwe.ru chestno-game.ru chestno-game.online;
-        ssl_certificate /etc/nginx/ssl/all.logotipiwe.ru/fullchain.pem;
-        ssl_certificate_key /etc/nginx/ssl/all.logotipiwe.ru/privkey.pem;
+        server_name chestno-game.ru chestno-game.online;
+        ssl_certificate /etc/nginx/ssl/all.chestno-game.all/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/all.chestno-game.all/privkey.pem;
 
         location / {
             set $SER http://index_front:80;
