--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -214,6 +214,13 @@ http {
         ssl_certificate /etc/nginx/ssl/all.chestno-game.all/fullchain.pem;
         ssl_certificate_key /etc/nginx/ssl/all.chestno-game.all/privkey.pem;
 
+        location ^~ /api {
+            proxy_pass https://n8n.logotipiwe.ru;
+            proxy_set_header HOST n8n.logotipiwe.ru;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
         location / {
             set $SER http://index_front:80;
             rewrite ^(.*)$ /honest$1 break;
