--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -214,11 +214,10 @@ http {
         ssl_certificate /etc/nginx/ssl/all.chestno-game.all/fullchain.pem;
         ssl_certificate_key /etc/nginx/ssl/all.chestno-game.all/privkey.pem;
 
-        location ^~ /api {
+        location ^~/api/v1/shop {
+            rewrite ^/api/v1/shop/(.*) /webhook/$1 break;
             proxy_pass https://n8n.logotipiwe.ru;
-            proxy_set_header HOST n8n.logotipiwe.ru;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header Host n8n.logotipiwe.ru;
         }
 
         location / {
