--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -231,4 +231,42 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
     }
+
+    server {
+        resolver 127.0.0.11 valid=30s ipv6=off;
+
+        listen 443 ssl http2;
+        server_name pgadmin.logotipiwe.ru;
+        ssl_certificate /etc/nginx/ssl/all.logotipiwe.ru/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/all.logotipiwe.ru/privkey.pem;
+
+        location / {
+            set $SER http://logotipiwe.ru:30135;
+
+            proxy_pass $SER;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header HOST $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+    }
+
+    server {
+        resolver 127.0.0.11 valid=30s ipv6=off;
+
+        listen 443 ssl http2;
+        server_name portainer.logotipiwe.ru;
+        ssl_certificate /etc/nginx/ssl/all.logotipiwe.ru/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/all.logotipiwe.ru/privkey.pem;
+
+        location / {
+            set $SER http://logotipiwe.ru:30134;
+
+            proxy_pass $SER;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header HOST $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+    }
 }
