[nginx] pgadmin + portainer domains

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -260,7 +260,7 @@ http {
         ssl_certificate_key /etc/nginx/ssl/all.logotipiwe.ru/privkey.pem;
 
         location / {
-            set $SER http://logotipiwe.ru:30134;
+            set $SER https://logotipiwe.ru:30134;
 
             proxy_pass $SER;
             proxy_set_header X-Forwarded-Proto $scheme;
